# kafka-test

./: .env  .env.development  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yaml  package-lock.json  package.json
rust-consumer/: .env  Cargo.toml  Dockerfile
rust-consumer/src/: main.rs  pcm_consumer.rs
rust-consumer/src/model/: mod.rs  pcm_model.rs  repository_trait.rs
src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
src/jobs/: jobs.controller.ts  jobs.module.ts  jobs.service.ts
src/jobs/dto/: create-job.dto.ts
src/jobs/entities/: job.entity.ts
src/kafka/: kafka.service.ts
src/utils/: config.ts  datasource.ts  http.client.ts
