[package]
name = "rust-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
kafka = "0.10.0"
serde_json = "1.0.120"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1.0.204"
regex = "1.10.6"
openssl = "0.10.66"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["sync"]
